// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToggleButton snapshots checked = false, disabled = false, iconOnly = false, size = small, with Icon, with label, iconPos = left 1`] = `
<Pressable
  disabled={false}
  onPress={[MockFunction]}
  style={[Function]}
  testID="ToggleButton"
/>
`;

exports[`ToggleButton snapshots checked = false, disabled = false, iconOnly = false, size = small, with Icon, with label, iconPos = right 1`] = `
<Pressable
  disabled={false}
  onPress={[MockFunction]}
  style={[Function]}
  testID="ToggleButton"
/>
`;

exports[`ToggleButton snapshots checked = false, disabled = false, iconOnly = true, size = base, with Icon, with label 1`] = `
<Pressable
  disabled={false}
  onPress={[MockFunction]}
  style={[Function]}
  testID="ToggleButton"
/>
`;

exports[`ToggleButton snapshots checked = false, disabled = true, iconOnly = false, size = large, with Icon, with label 1`] = `
<Pressable
  disabled={true}
  onPress={[MockFunction]}
  style={[Function]}
  testID="ToggleButton"
/>
`;

exports[`ToggleButton snapshots checked = true, disabled = false, iconOnly = false, size = xlarge, with style, with Icon 1`] = `
<Pressable
  disabled={false}
  onPress={[MockFunction]}
  style={[Function]}
  testID="ToggleButton"
/>
`;

exports[`ToggleButton snapshots default 1`] = `
<Pressable
  onPress={[MockFunction]}
  style={[Function]}
  testID="ToggleButton"
/>
`;
